// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBarUnderlined component renders correctly 1`] = `
<styled.div>
  <Input
    backgroundColor="white"
    borderColor="transparent"
    color="gray-5"
    disabled={false}
    type="text"
    width="100%"
  />
  <styled.div>
    <Icon
      color="gray-5"
      name="search-filled"
      selectable={true}
      size="20px"
      weight={400}
    />
  </styled.div>
</styled.div>
`;

exports[`SearchBarUnderlined component renders correctly with handleChange 1`] = `
<styled.div>
  <Input
    backgroundColor="white"
    borderColor="transparent"
    color="gray-5"
    disabled={false}
    onChange={[Function]}
    type="text"
    width="100%"
  />
  <styled.div>
    <Icon
      color="gray-5"
      name="search-filled"
      selectable={true}
      size="20px"
      weight={400}
    />
  </styled.div>
</styled.div>
`;

exports[`SearchBarUnderlined component renders correctly with handleClick 1`] = `
<styled.div>
  <Input
    backgroundColor="white"
    borderColor="transparent"
    color="gray-5"
    disabled={false}
    type="text"
    width="100%"
  />
  <styled.div>
    <Icon
      color="gray-5"
      name="search-filled"
      onClick={[Function]}
      selectable={true}
      size="20px"
      weight={400}
    />
  </styled.div>
</styled.div>
`;

exports[`SearchBarUnderlined component renders correctly with value 1`] = `
<styled.div>
  <Input
    backgroundColor="white"
    borderColor="transparent"
    color="gray-5"
    disabled={false}
    type="text"
    value="My search"
    width="100%"
  />
  <styled.div>
    <Icon
      color="gray-5"
      name="search-filled"
      selectable={true}
      size="20px"
      weight={400}
    />
  </styled.div>
</styled.div>
`;
